# nimara-stripe

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md
etc/: aws_local_setup.py
etc/infra/aws/: data.tf  iam.tf  layers.tf  locals.tf  main.tf  provider.tf  secrets.tf  terraform.tfvars.example  variables.tf
src/graphql/fragments/: Address.graphql  CalculateTaxesEvent.graphql  TaxBase.graphql  TransactionCancelationRequestedEvent.graphql  TransactionChargeRequestedEvent.graphql  TransactionInitializeSessionEvent.graphql  TransactionProcessSessionEvent.graphql  TransactionRefundRequestedEvent.graphql
src/graphql/queries/: check_app_token.graphql
src/graphql/subscriptions/: CalculateTaxes.graphql
src/graphql_client/: __init__.py  calculate_taxes.py  check_app_token.py  client.py  enums.py  fragments.py  input_types.py  operations.py  payment_gateway_initialize_session.py  transaction_cancelation_requested.py  transaction_charge_requested.py  transaction_event_report.py  transaction_initialize_session.py  transaction_process_session.py  transaction_refund_requested.py
src/nimara_stripe/: __init__.py  app.py  jwks.py  settings.py
src/nimara_stripe/api/saleor/: app.py  deps.py  endpoints.py  schema.py  utils.py
src/nimara_stripe/api/saleor/templates/: base.html  index.html  loading.html
src/nimara_stripe/api/stripe/: app.py  endpoints.py  utils.py
src/nimara_stripe/services/saleor/: auth.py  client.py  config.py  deps.py  utils.py
src/nimara_stripe/services/stripe/: auth.py  currencies.py  enum.py  exceptions.py  utils.py  webhook_utils.py
src/nimara_stripe/utils/: aws.py  helpers.py
tests/: conftest.py  test-snakeoil-rsa-priv  test_app.py  test_client.py  test_config.py  test_jwks.py
tests/data/: alb_event.json  api_gateway_v1_localstack_event.json
tests/test_handlers/: conftest.py  test_payment_handler.py  test_saleor_handlers.py  test_saleor_handlers_utils.py  test_stripe_handlers_utils.py
tests/test_stripe/: stripe_mock.py  test_auth.py  test_currencies.py  test_utils.py  test_webhook_utils.py
